--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "preact-baby-names",
   "short_name": "baby-names",
-  "version": "v1.0.0",
+  "version": "1.1.0",
   "description": "Small Preact App Displaying Random Boy or Girl Names",
   "license": "MIT",
+  "author": "Christopher Reid <Reid.Christopher.404@Gmail.Com>",
   "scripts": {
     "prebuild": "yarn clean:build",
     "pretest": "yarn lint && yarn clean:test",
@@ -16,8 +17,9 @@
     "lint": "yarn run lint:ts && yarn run prettier",
     "lint:ts": "tslint -c tslint.json 'src/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/*.{ts,tsx}'",
-    "clean:build": "rimraf ./dist",
-    "clean:test": "rimraf ./coverage"
+    "clean:build": "rimraf dist/",
+    "clean:modules": "rimraf node_modules/",
+    "clean:test": "rimraf coverage/"
   },
   "dependencies": {
     "preact": "8.4.2",
@@ -44,16 +46,12 @@
     "jest": "^24.7.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "node-sass": "4.11.0",
     "offline-plugin": "5.0.6",
-    "postcss-cli": "6.1.2",
-    "postcss-loader": "3.0.0",
     "preact-compat": "3.18.4",
     "preact-render-spy": "1.3.0",
     "prettier": "^1.16.4",
     "rimraf": "2.6.3",
     "style-loader": "0.23.1",
-    "sass-loader": "7.1.0",
     "svg-url-loader": "2.3.2",
     "terser-webpack-plugin": "1.2.2",
     "ts-jest": "^24.0.2",
