--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,12 +29,17 @@ jobs:
           when: on_success
   deploy:
     docker:
-      - image: circleci/node:latest
+      - image: circleci/python:2.7-jessie
     steps:
       - checkout
       - run:
           name: Install AWS Cli
           command: sudo pip install awscli
+      - run:
+          name: "Update Node.js and npm"
+          command: |
+            curl -sSL "https://nodejs.org/dist/v11.10.0/node-v11.10.0-linux-x64.tar.xz" | sudo tar --strip-components=2 -xJ -C /usr/local/bin/ node-v11.10.0-linux-x64/bin/node
+            curl https://www.npmjs.com/install.sh | sudo bash
       - restore_cache:
           name: Restore Npm Package Cache
           keys:
@@ -58,4 +63,3 @@ workflows:
           filters:
             branches:
               only: master
-              
