Removed Yarn from package.json

--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "MIT",
   "author": "Christopher Reid <Reid.Christopher.404@Gmail.Com>",
   "scripts": {
-    "prebuild": "yarn clean:build",
-    "pretest": "yarn lint && yarn clean:test",
+    "prebuild": "npm run clean:build",
+    "pretest": "npm run lint && npm run clean:test",
     "start": "cross-env NODE_ENV=development webpack-dev-server --config ./internals/webpack/webpack.config.dev.js",
     "build": "cross-env NODE_ENV=production webpack --config ./internals/webpack/webpack.config.prod.js --color -p --progress --hide-modules --display=verbose",
     "test": "cross-env NODE_ENV=testing jest --coverage -w 1",
-    "test-ci": "yarn run test && yarn run coveralls",
+    "test-ci": "npm run test && npm run coveralls",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "bundle-report": "webpack-bundle-analyzer --port 8050 dist/stats.json",
-    "lint": "yarn run lint:ts && yarn run prettier",
+    "lint": "npm run lint:ts && npm run prettier",
     "lint:ts": "tslint -c tslint.json 'src/*.{ts,tsx}' --fix",
     "prettier": "prettier --write 'src/*.{ts,tsx}'",
     "clean:build": "rimraf dist/",
